src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Source_System__c</fullName>
        <label>External Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cat_1_Code__c</fullName>
        <label>Cat 1 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cat_2_Code__c</fullName>
        <label>Cat 2 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cat_3_Code__c</fullName>
        <label>Cat 3 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_1_4__c</fullName>
        <description>E101CRMXIF_SUBJECT_CODE</description>
        <label>Category 1 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_1_8__c</fullName>
        <description>E101CRMXIF_SUBJECT_CODEGROUP</description>
        <label>Category 1 8</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_2_4__c</fullName>
        <description>E101CRMXIF_SUBJECT_CODE</description>
        <label>Category 2 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Account_Number__c</fullName>
        <formula>Account.EC_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Category_Values__c</fullName>
        <label>EC Category Value</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EC_Request_Service_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MACHINE PROBLEM - DISH</fullName>
                </value>
                <value>
                    <fullName>MACHINE PROBLEM - DISPENSER</fullName>
                </value>
                <value>
                    <fullName>MACHINE PROBLEM - LAUNDRY</fullName>
                </value>
                <value>
                    <fullName>GLASS WASHER</fullName>
                </value>
                <value>
                    <fullName>CONVEYOR BELT</fullName>
                </value>
                <value>
                    <fullName>PRERINSE SPRAYER</fullName>
                </value>
                <value>
                    <fullName>OUT OF PRODUCT</fullName>
                </value>
                <value>
                    <fullName>INSTALLATION</fullName>
                </value>
                <value>
                    <fullName>TRAINING</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>CANCEL SERVICE REQUEST</fullName>
                </value>
                <value>
                    <fullName>NEED MSDS</fullName>
                </value>
                <value>
                    <fullName>DELIVERY ISSUE</fullName>
                </value>
                <value>
                    <fullName>PRICING</fullName>
                </value>
                <value>
                    <fullName>CREDIT ISSUE</fullName>
                </value>
                <value>
                    <fullName>RETURN</fullName>
                </value>
                <value>
                    <fullName>INFORMATION</fullName>
                </value>
                <value>
                    <fullName>REPAIR</fullName>
                </value>
                <value>
                    <fullName>MAINTENANCE</fullName>
                </value>
                <value>
                    <fullName>DE-INSTALLATION</fullName>
                </value>
                <value>
                    <fullName>REBUILDING</fullName>
                </value>
                <value>
                    <fullName>PRODUCT CHANGE</fullName>
                </value>
                <value>
                    <fullName>COMMISIONING</fullName>
                </value>
                <value>
                    <fullName>CONCENTRATION CHANGE/CHECK</fullName>
                </value>
                <value>
                    <fullName>REMEDIATION</fullName>
                </value>
                <value>
                    <fullName>TENDER PREPARATION</fullName>
                </value>
                <value>
                    <fullName>MISCELLANEOUS SERVICES</fullName>
                </value>
                <value>
                    <fullName>INSTRUMENT CARE</fullName>
                </value>
                <value>
                    <fullName>MAINTENANCE ETD2</fullName>
                </value>
                <value>
                    <fullName>OLYMPUS REMEDIATION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_PortalAccessRole__c</fullName>
        <label>Portal Access Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Basic+</fullName>
                    <isActive>false</isActive>
                    <label>Basic+</label>
                </value>
                <value>
                    <fullName>Buyer+</fullName>
                    <isActive>false</isActive>
                    <label>Buyer+</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_Previous_Role__c</fullName>
        <label>Previous Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_ReqService_Email__c</fullName>
        <label>EC ReqService Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EC_ReqService_Phone__c</fullName>
        <label>EC ReqService Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EC_Request_Service_Type__c</fullName>
        <label>EC Request Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HEALTHCARE</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL</fullName>
                </value>
                <value>
                    <fullName>PEST ELIMINATION</fullName>
                </value>
                <value>
                    <fullName>ENERGY SERVICE</fullName>
                </value>
                <value>
                    <fullName>FOOD &amp; BEVERAGE</fullName>
                </value>
                <value>
                    <fullName>LIFE SCIENCES</fullName>
                </value>
                <value>
                    <fullName>TEXTILE CARE</fullName>
                </value>
                <value>
                    <fullName>WPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_SalesRepName__c</fullName>
        <formula>Account.EC_SalesRepresentative__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesRepName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Sales_Rep_Email__c</fullName>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EC_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to user field</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>E101CRMXIF_BUSTRANS-Process_Type</description>
        <label>Order Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <description>E101CRMXIF_PARTNER- PARTNER_NO
Record with Application Name: CRMXIF_PARTNER
Read the partner segment for partner function (PARTNER_FCT) ‘00000001’</description>
        <label>Ship To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <description>E101CRMXIF_PARTNER- PARTNER_NO
Record with Application Name: CRMXIF_PARTNER
Read the partner segment for partner function (PARTNER_FCT) ‘00000001’.</description>
        <label>Sold To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
	<fields>
		<fullName>Integration_Status__c</fullName>
		<description>Integration Status</description>
		<inlineHelpText>Integration Status</inlineHelpText>
		<label>Integration Status</label>
		<length>255</length>
		<type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Integration Error Log</description>
        <label>Integration Error Log (if any)</label>
        <referenceTo>Integration_Log__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>Category__c</fullName>
        <description>Used to in routing in Ecolab project.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SupportCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>Used to in routing in Ecolab project.</description>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SupportSubCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used for community case routing in Ecolab Project.</description>
        <label>Run Assignment Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Category__c</fullName>
        <description>Required to be populated when resolving the case for service cloud project.</description>
        <label>Resolution Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apply Break / Fix</fullName>
                </value>
                <value>
                    <fullName>Case Abandoned</fullName>
                </value>
                <value>
                    <fullName>Correct Data Error</fullName>
                </value>
                <value>
                    <fullName>No Workaround Applied</fullName>
                </value>
                <value>
                    <fullName>Provide Training or Documentation</fullName>
                </value>
                <value>
                    <fullName>Request for Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Description__c</fullName>
        <description>Required to be populated when resolving the case for service cloud project.</description>
        <inlineHelpText>Please note it will be visible to customer.</inlineHelpText>
        <label>Resolution Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Formula__c</fullName>
        <formula>IF( ISBLANK(Contact_Email__c) , 
    Contact.Email  , 
    Contact_Email__c
)</formula>
        <label>Case Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Used on community and as agent to take Contact Email as input in Service Cloud project.</description>
        <label>Case Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Formula__c</fullName>
        <formula>IF( ISBLANK(SuppliedPhone) , 
    Contact.Phone, 
    SuppliedPhone
)</formula>
        <label>Case Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>TODAY() -  DATEVALUE(CreatedDate)</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>Used as one of the values to calculate Priority for service cloud project.</description>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - High</fullName>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                    <default>true</default>
                    <label>2 - Medium</label>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>Used as one of the values to calculate Priority in service cloud project.</description>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - High</fullName>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                    <default>true</default>
                    <label>2 - Medium</label>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_SLA__c</fullName>
        <formula>IF(TEXT(Priority) == &apos;Critical&apos;, (CreatedDate + (4/24)),IF(TEXT(Priority) == &apos;High&apos;, (CreatedDate + (8/24)),IF(TEXT(Priority) == &apos;Medium&apos;, (CreatedDate + 1),IF(TEXT(Priority) == &apos;Low&apos;, (CreatedDate + 1),NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response SLA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolved_Resolution_Time__c</fullName>
        <label>Resolved Resolution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolution_SLA__c</fullName>
        <formula>IF(TEXT(Priority) == &apos;Critical&apos;, (CreatedDate + 1),IF(TEXT(Priority) == &apos;High&apos;, (CreatedDate + 2),IF(TEXT(Priority) == &apos;Medium&apos;, (CreatedDate + 7),IF(TEXT(Priority) == &apos;Low&apos;, (CreatedDate + 14),NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution SLA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <label>First Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Resolution_SLA_Breached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resolution SLA Breached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Response_SLA_Breached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Response SLA Breached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Queue__c</fullName>
        <label>Assigned To Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Division__c</fullName>
        <formula>Contact.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCS_Case_Action__c</fullName>
        <description>This field will help us for firing assignment rules</description>
        <label>Case Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connect L3 Agent</fullName>
                </value>
                <value>
                    <fullName>Connect Technical Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_from_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide from Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Public_Case_Comment__c</fullName>
        <description>Used to store latest case comment created by user.</description>
        <label>Latest Public Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTTR__c</fullName>
        <formula>Resolved_Resolution_Time__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTTR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Performance__c</fullName>
        <formula>IF(Is_Resolution_SLA_Breached__c, &apos;Breach&apos;, &apos;Okay&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Performance</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Abandoned_Cases_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Abandoned Cases</label>
        <queue>Abandoned_Cases</queue>
        <sharedTo>
            <role>Admin</role>
            <role>Connect_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosedCases_Support</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>EC_Account_Number__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Support</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
        <sharedTo>
            <role>Admin</role>
            <role>Connect_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>EC_Account_Number__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>EC_Account_Number__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Support</value>
        </filters>
        <filters>
            <field>Hide_from_Customer__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Cases</label>
        <sharedTo>
            <allCustomerPortalUsers/>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
	<listViews>
        <fullName>Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>EC_Account_Number__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Support</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Hide_from_Customer__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Closed Cases</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers/>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
	<listViews>
        <fullName>EmptyQueue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Chat Pending</label>
        <queue>Chat_Pending</queue>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBS_Agents_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>EBS Agents Unaccepted</label>
        <queue>EBS_Agents</queue>
        <sharedTo>
            <role>Connect_Support</role>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>EC_Account_Number__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <sharedTo>
            <role>Connect_Support</role>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>EC_Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Support</value>
        </filters>
        <label>My Open Cases</label>
        <language>en_US</language>
        <sharedTo>
            <role>Connect_Support</role>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NSAP_Agents_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>NSAP Agents Unaccepted</label>
        <queue>NSAP_Agents</queue>
        <sharedTo>
            <role>Connect_Support</role>
            <role>Admin</role>
        </sharedTo>
    </listViews>    
    <listViews>
        <fullName>My_Open_Cases_Community</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>EC_Account_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Support</value>
        </filters>
        <filters>
            <field>Hide_from_Customer__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Cases</label>
        <sharedTo>
            <allCustomerPortalUsers/>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>EC_Account_Number__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Support</value>
        </filters>
        <label>My Open Cases</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Q1_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Q1</label>
        <queue>Q1</queue>        
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Request_Service_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.TYPE</columns>
        <filterScope>Everything</filterScope>
        <!--<filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Request Service</value>
        </filters>-->
        <label>Request Service Cases</label>
		<sharedTo>
            <role>Admin</role>
        </sharedTo>    
    </listViews>
	<listViews>
        <fullName>Cases_Support</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>EC_Account_Number__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Category__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Support</value>
        </filters>
        <label>All Support Cases</label>
        <sharedTo>
            <role>Connect_Support</role>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <businessProcesses>
        <fullName>Internal</fullName>
        <description>Used for Ecolab service request</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <!--<values>
            <fullName>Assigned</fullName>
        </values>-->
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <!--<values>
            <fullName>Exception</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>-->
        <values>
            <fullName>Message Failed</fullName>
        </values>
        <values>
            <fullName>Message Sent</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <!-- <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>SAP Message Failed</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer Response</fullName>
        </values>-->
    </businessProcesses>
    <businessProcesses>
        <fullName>Support</fullName>
        <description>Used for Ecolab service cloud, for Sales Rep, Community user and Agents.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Awaiting Customer Response</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending additional Support</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <recordTypes>
        <fullName>Support</fullName>
        <active>true</active>
        <businessProcess>Support</businessProcess>
        <!--<compactLayoutAssignment>Support_Compact_Layout</compactLayoutAssignment>-->
        <description>Used for Ecolab service cloud, for Sales Rep, Community user and Agents.</description>
        <label>Support</label>
    </recordTypes>
    <validationRules>
        <fullName>Closed_case_cannot_be_reopened</fullName>
        <active>true</active>
        <description>To restrict user, closed case can&apos;t be opened again.</description>
        <errorConditionFormula>IF( RecordType.Name == &apos;Support&apos; &amp;&amp;  ISPICKVAL(PRIORVALUE(Status),&apos;Closed&apos;) &amp;&amp;  ISCHANGED( Status), true, false)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Closed case can&apos;t be reopen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Community_User_Case_Status_Validate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
				 RecordType.Name = &apos;Support&apos;,
					NOT(ISNEW()), ISCHANGED(Status),  
					OR($Profile.Name=&apos;Sales Rep&apos;, $Profile.Name =&apos;Ecolab Customer Community Plus Users&apos;),
					TEXT(Status) != &apos;Closed&apos;,
				 OR(TEXT(Status) != &apos;In Progress&apos;, 
     TEXT(PRIORVALUE(Status)) != &apos;Awaiting Customer Response&apos;)
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You cannot change case status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Res_Demandatory_for_resolved_case</fullName>
        <active>true</active>
        <description>Restrict user to save case record without putting Resolution Description. If case is resolved then Description is mandatory.</description>
        <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Support&apos;,
				ISCHANGED(Status),
				ISPICKVAL(Status, &apos;Resolved&apos;),
				OR(ISBLANK(Resolution_Description__c), ISBLANK( TEXT(Resolution_Category__c)))
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Resolution Description and Resolution Category are mandatory for resolved case.</errorMessage>
    </validationRules>
</CustomObject>